# disjoint-sets

./: CHANGELOG.md  disjoint-sets.cabal  union-find.cabal
src/: DisjointSets.hs  UnionFind.hs
test/: Main.hs
