cabal-version: 2.2
name:
  disjoint-sets
version:
  0.1
synopsis:
  union find (FAST, GOOD, DOESN't SUCK)
-- description:
homepage:
  https://github.com/chessai/disjoint-sets
bug-reports:
  https://github.com/chessai/disjoint-sets#issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
-- copyright:
category:
  Data
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    DisjointSets
  build-depends:
    , base
    , containers
    , mtl
    , primitive
    , transformers
    , vector
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -O2

test-suite disjoint-sets-test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    , base
    , hedgehog
    , mtl
    , transformers
    , disjoint-sets
